--- a/Contact-us.css
+++ b/Contact-us.css
@@ -13,25 +13,22 @@
 
 .u-section-1 .u-custom-html-1 {
   min-height: 859px;
-  width: 640px;
-  margin: 21px auto 60px;
-}
-
-@media (max-width: 1199px) {
-  .u-section-1 .u-custom-html-1 {
-    height: auto;
-  }
+  height: auto;
+  width: 400px;
+  margin: 45px auto 60px;
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1151px;
+  }
+
   .u-section-1 .u-text-1 {
     width: 540px;
   }
 
   .u-section-1 .u-custom-html-1 {
-    margin-right: 50px;
-    margin-left: -50px;
-    width: 540px;
+    margin-top: 38px;
   }
 }
 
@@ -43,6 +40,5 @@
   .u-section-1 .u-custom-html-1 {
     margin-right: 35px;
     margin-left: -35px;
-    width: 340px;
   }
 }
