--- a/About-us.css
+++ b/About-us.css
@@ -530,6 +530,10 @@
     min-height: 1144px;
   }
 
+  .u-section-2 .u-text-1 {
+    font-size: 2.5rem;
+  }
+
   .u-section-2 .u-list-1 {
     grid-template-columns: 100%;
   }
