--- a/Contact-us.css
+++ b/Contact-us.css
@@ -13,9 +13,14 @@
 
 .u-section-1 .u-custom-html-1 {
   min-height: 859px;
-  height: auto;
   width: 400px;
   margin: 45px auto 60px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-custom-html-1 {
+    height: auto;
+  }
 }
 
 @media (max-width: 767px) {
