--- a/Home.css
+++ b/Home.css
@@ -8,29 +8,40 @@
 }
 
 .u-section-3-1 .u-group-1 {
-  width: 570px;
-  min-height: 228px;
-  margin: -8px auto 60px;
+  width: 522px;
+  min-height: 133px;
+  height: auto;
+  margin: -8px 285px 60px auto;
 }
 
 .u-section-3-1 .u-container-layout-1 {
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .u-section-3-1 .u-text-1 {
   font-size: 1.875rem;
-  margin: 0 auto;
+  margin: 30px auto 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-3-1 .u-sheet-1 {
     min-height: 582px;
   }
+
+  .u-section-3-1 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
 @media (max-width: 991px) {
   .u-section-3-1 .u-sheet-1 {
     min-height: 557px;
+  }
+
+  .u-section-3-1 .u-group-1 {
+    margin-right: 198px;
   }
 }
 
@@ -40,12 +51,21 @@
   }
 
   .u-section-3-1 .u-group-1 {
-    width: 540px;
+    width: 470px;
+    min-height: 104px;
+    margin-right: 18px;
   }
 
   .u-section-3-1 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-3-1 .u-text-1 {
+    width: auto;
+    margin-top: 34px;
+    margin-left: 44px;
+    margin-right: 44px;
   }
 }
 
@@ -57,9 +77,16 @@
     width: auto;
   }
 
+  .u-section-3-1 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
   .u-section-3-1 .u-text-1 {
     width: 248px;
     margin-top: 17px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }.u-section-3-2 {
   background-image: url("images/IMG-20210222-WA0002.jpg");
@@ -94,11 +121,20 @@
   .u-section-3-2 {
     min-height: 557px;
   }
+
+  .u-section-3-2 .u-group-1 {
+    width: calc(((100% - 720px) / 2) + 360px);
+    min-height: 99px;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-3-2 {
     min-height: 477px;
+  }
+
+  .u-section-3-2 .u-group-1 {
+    width: calc(((100% - 540px) / 2) + 360px);
   }
 
   .u-section-3-2 .u-container-layout-1 {
@@ -151,7 +187,15 @@
   }
 
   .u-section-3-3 .u-group-1 {
-    margin-top: 291px;
+    width: 441px;
+    min-height: 130px;
+    margin-top: 326px;
+  }
+
+  .u-section-3-3 .u-text-1 {
+    width: auto;
+    margin-right: 0;
+    margin-left: 14px;
   }
 }
 
@@ -215,9 +259,18 @@
     min-height: 582px;
   }
 
-  .u-section-3-4 .u-container-layout-1 {
-    padding-top: 30px;
-    padding-bottom: 30px;
+  .u-section-3-4 .u-group-1 {
+    width: 420px;
+    min-height: 135px;
+    margin-top: 447px;
+    margin-right: 233px;
+  }
+
+  .u-section-3-4 .u-text-1 {
+    width: auto;
+    margin-top: 32px;
+    margin-left: 21px;
+    margin-right: 21px;
   }
 }
 
@@ -225,34 +278,55 @@
   .u-section-3-4 .u-sheet-1 {
     min-height: 557px;
   }
+
+  .u-section-3-4 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .u-section-3-4 .u-text-1 {
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 767px) {
   .u-section-3-4 .u-sheet-1 {
-    min-height: 477px;
+    min-height: 645px;
   }
 
   .u-section-3-4 .u-group-1 {
-    min-height: 125px;
+    min-height: 139px;
+    margin-top: 506px;
+    margin-right: auto;
+    margin-left: 0;
   }
 
   .u-section-3-4 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
   }
-
-  .u-section-3-4 .u-text-1 {
-    margin-top: 30px;
-  }
 }
 
 @media (max-width: 575px) {
+  .u-section-3-4 .u-sheet-1 {
+    min-height: 477px;
+  }
+
   .u-section-3-4 .u-group-1 {
     min-height: 162px;
-    margin-top: 289px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
+  }
+
+  .u-section-3-4 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .u-section-3-4 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }.u-section-3-5 {
   background-image: url("images/IMG-20210222-WA0001.jpg");
@@ -261,32 +335,34 @@
 }
 
 .u-section-3-5 .u-group-1 {
-  width: calc(((100% - 1140px) / 2) + 490px);
-  min-height: 228px;
-  margin: 329px auto 0 0;
+  width: calc(((100% - 1140px) / 2) + 433px);
+  min-height: 156px;
+  height: auto;
+  margin: 401px auto 0 0;
 }
 
 .u-section-3-5 .u-container-layout-1 {
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .u-section-3-5 .u-text-1 {
   font-size: 1.875rem;
-  margin: -30px -30px 0;
+  margin: 0 -68px 0 8px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3-5 {
-    min-height: 582px;
+    min-height: 588px;
   }
 
   .u-section-3-5 .u-group-1 {
-    width: calc(((100% - 940px) / 2) + 470px);
-    min-height: 185px;
+    width: calc(((100% - 940px) / 2) + 341px);
+    margin-top: 432px;
   }
 
   .u-section-3-5 .u-text-1 {
-    margin-top: 91px;
+    width: auto;
   }
 }
 
@@ -296,18 +372,30 @@
   }
 
   .u-section-3-5 .u-group-1 {
-    width: calc(((100% - 720px) / 2) + 470px);
+    width: calc(((100% - 720px) / 2) + 341px);
+    min-height: 162px;
+  }
+
+  .u-section-3-5 .u-container-layout-1 {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .u-section-3-5 .u-text-1 {
+    margin-right: -90px;
+    margin-left: 30px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3-5 {
-    min-height: 477px;
+    min-height: 590px;
   }
 
   .u-section-3-5 .u-group-1 {
-    width: calc(((100% - 540px) / 2) + 422px);
-    min-height: 148px;
+    width: calc(((100% - 540px) / 2) + 334px);
+    min-height: 136px;
+    margin-top: 454px;
   }
 
   .u-section-3-5 .u-container-layout-1 {
@@ -316,21 +404,27 @@
   }
 
   .u-section-3-5 .u-text-1 {
-    width: auto;
-    margin-top: 0;
-    margin-left: 32px;
+    width: 330px;
+    margin-top: 21px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
 @media (max-width: 575px) {
+  .u-section-3-5 {
+    min-height: 607px;
+  }
+
   .u-section-3-5 .u-group-1 {
-    width: calc(((100% - 340px) / 2) + 340px);
-    margin-top: 295px;
-    margin-bottom: 34px;
+    width: calc(((100% - 340px) / 2) + 259px);
+    min-height: 111px;
+    margin-top: 495px;
   }
 
   .u-section-3-5 .u-text-1 {
-    margin-right: 0;
+    width: 314px;
+    margin-top: 9px;
     margin-left: 25px;
   }
 }.u-section-3-6 {
@@ -340,8 +434,9 @@
 }
 
 .u-section-3-6 .u-group-1 {
-  width: calc(((100% - 1140px) / 2) + 304px);
-  min-height: 186px;
+  width: calc(((100% - 1140px) / 2) + 270px);
+  min-height: 115px;
+  height: auto;
   margin: 172px auto 60px 0;
 }
 
@@ -354,7 +449,7 @@
   font-size: 1.875rem;
   font-weight: normal;
   font-family: Roboto, sans-serif;
-  margin: 0 -30px;
+  margin: 0 -79px 0 19px;
 }
 
 @media (max-width: 1199px) {
@@ -363,12 +458,19 @@
   }
 
   .u-section-3-6 .u-group-1 {
-    width: calc(((100% - 940px) / 2) + 304px);
+    width: calc(((100% - 940px) / 2) + 270px);
+    min-height: 132px;
   }
 
   .u-section-3-6 .u-container-layout-1 {
     padding-top: 30px;
     padding-bottom: 30px;
+  }
+
+  .u-section-3-6 .u-text-1 {
+    width: auto;
+    margin-right: -60px;
+    margin-left: 0;
   }
 }
 
@@ -378,7 +480,7 @@
   }
 
   .u-section-3-6 .u-group-1 {
-    width: calc(((100% - 720px) / 2) + 304px);
+    width: calc(((100% - 720px) / 2) + 270px);
   }
 }
 
@@ -388,7 +490,7 @@
   }
 
   .u-section-3-6 .u-group-1 {
-    width: calc(((100% - 540px) / 2) + 304px);
+    width: calc(((100% - 540px) / 2) + 270px);
   }
 
   .u-section-3-6 .u-container-layout-1 {
@@ -399,15 +501,13 @@
 
 @media (max-width: 575px) {
   .u-section-3-6 .u-group-1 {
-    width: calc(((100% - 340px) / 2) + 202px);
-    min-height: 184px;
+    width: calc(((100% - 340px) / 2) + 170px);
+    min-height: 146px;
     margin-top: 118px;
   }
 
   .u-section-3-6 .u-text-1 {
-    width: auto;
-    margin-top: 38px;
-    margin-left: 0;
+    margin-top: 30px;
     margin-right: 0;
   }
 }.u-section-1 {
